--- a/css/korea.css
+++ b/css/korea.css
@@ -1,11 +1,25 @@
 @charset "UTF-8";
 
-#container {
-	width: 700px;
-	min-height: 700px;
-	float: left;
-	margin: 15px 35px;
+div {
+    display: flex;
 }
+
+#gis-container, #image-container {
+    flex: 1;
+    width: 50%;
+    box-sizing: border-box; /* 내부 여백과 테두리를 포함한 전체 크기를 유지하도록 함 */
+}
+
+#gis-container {
+    overflow: hidden; /* 지도 영역이 넘칠 경우 가려지도록 함 */
+}
+
+#image-container {
+    overflow: auto; /* 이미지가 넘칠 경우 스크롤 표시 */
+    position: relative;
+}
+
+
 #states path {
 	fill: #585858;
 	stroke: #000000;
@@ -39,4 +53,26 @@
 	border: 1px solid #ccc;
 	padding: 10px;
 	display: none;
+}
+
+ul {
+	background-color: #FFDAB9;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+li {float: left;}
+li a {
+	display: block;
+	background-color: #FFDAB9;
+	color: #000;
+	padding: 12px;
+	text-decoration: none;
+	text-align: center;
+	letter-spacing: 20px;
+}
+li a:hover {
+	background-color: #cd853f;
+	color: white;
 }
